--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -112,4 +112,86 @@
   <p>
     Junte-se à nossa comunidade de aprendizes e profissionais da tecnologia. Inscreva-se hoje e comece a transformar sua carreira com a DigitalPro. Aproveite nossas ofertas especiais de lançamento!
   </p>
+  <h5>Como foi planejada a DigitalPro?</h5>
+  <ol>
+    <li>
+      Pesquisa e Análise
+      <ul>
+        <li>Identificar necessidades do mercado</li>
+        <li>
+          Analisar concorrentes
+        </li>
+        <li>
+          Definir público-alvo
+        </li>
+      </ul>
+    </li>
+    <li>
+      Desenvolcimento da plataforma
+      <ul>
+        <li>
+          Escolha da tecnologia:
+          <ul>
+            <li>
+              Foi usado Node.js como tecnologia principal
+            </li>
+          </ul>
+        </li>
+        <li>
+          Design UX/UI
+        </li>
+        <li>
+          Implementação de funcionalidades (cursos, fórum, etc)
+        </li>
+      </ul>
+    </li>
+    <li>
+      Conteúdo
+      <ul>
+        <li>
+          Criar e/ou lincenciar cursos
+        </li>
+        <li>
+          Desenvolver materiais interativos
+        </li>
+      </ul>
+    </li>
+    <li>
+      Marketing e Lançamento
+      <ul>
+        <li>
+          Estratégias de marketing digital incluidas no dia do lançamento
+        </li>
+        <li>
+          Campanhas de lançamento também feitas no dia do lançamento
+        </li>
+      </ul>
+    </li>
+    <li>
+      Manutenção e Suporte
+      <ul>
+        <li>
+          Atualizações regulares
+        </li>
+        <li>
+          Suporte ao usuário
+        </li>
+      </ul>
+    </li>
+  </ol>
+  <h5>Agradecimento final para que apoia o projeto</h5>
+  <p class="p-2">
+    Gostaríamos de expressar nossa mais profunda gratidão a todos que participaram e apoiaram a jornada da <strong>DigitalPro</strong>. Desde o início, nosso objetivo foi oferecer educação continuada de qualidade em tecnologia e informática, e seu envolvimento tornou essa missão possível. Cada sugestão, feedback e palavra de encorajamento ajudaram a moldar o que somos hoje.
+    <br><br>
+    É inspirador ver como a comunidade abraçou a <strong>DigitalPro</strong>. Sua dedicação e paixão pela aprendizagem contínua nos motivam a melhorar constantemente e a trazer conteúdos cada vez mais relevantes e inovadores. Vocês são a razão pela qual existimos e continuamos a crescer.
+    <br><br>
+    Nosso sucesso não seria possível sem o comprometimento incansável de nossa equipe. Seu trabalho árduo, criatividade e inovação são a força motriz por trás de cada curso e recurso que oferecemos. Vocês são verdadeiros visionários e líderes no campo da educação digital.
+    <br><br>
+    Também agradecemos aos nossos parceiros e colaboradores, cuja expertise e apoio foram fundamentais para alcançar nossos objetivos. Juntos, conseguimos criar uma plataforma robusta e acessível que beneficia milhares de aprendizes.
+    <br><br>
+    Por fim, nosso maior agradecimento vai para você, nosso estudante. Seu desejo de aprender e crescer é o que nos inspira todos os dias. Obrigado por escolher a <strong>DigitalPro</strong> como sua parceira na educação e por fazer parte desta jornada incrível. O futuro é brilhante e estamos ansiosos para continuar a explorá-lo juntos.
+    <br><br>
+    Muito obrigado! 🚀
+  </p>
+  {{!-- <ol start="1" class="relative list-outside marker:text-foreground-750 dark:marker:text-foreground-600 flex flex-col ms-5 marker:normal-nums marker:text-sm-strong"><li class="ps-2" style="opacity: 1; will-change: auto;"><p><span class=""><strong>Pesquisa e Análise</strong></span></p><ul class="relative list-outside marker:text-foreground-750 dark:marker:text-foreground-600 flex flex-col ms-4 px-1"><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Identificar necessidades do mercado</span></p></li><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Analisar concorrentes</span></p></li><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Definir público-alvo</span></p></li></ul></li><li class="ps-2" style="opacity: 1; will-change: auto;"><p><span class=""><strong>Desenvolvimento da Plataforma</strong></span></p><ul class="relative list-outside marker:text-foreground-750 dark:marker:text-foreground-600 flex flex-col ms-4 px-1"><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Escolha da tecnologia (ex: React, Node.js)</span></p></li><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Design UI/UX</span></p></li><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Implementação de funcionalidades (cursos, fórum, certificados)</span></p></li></ul></li><li class="ps-2" style="opacity: 1; will-change: auto;"><p><span class=""><strong>Conteúdo</strong></span></p><ul class="relative list-outside marker:text-foreground-750 dark:marker:text-foreground-600 flex flex-col ms-4 px-1"><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Criar e/ou licenciar cursos</span></p></li><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Desenvolver materiais interativos</span></p></li></ul></li><li class="ps-2" style="opacity: 1; will-change: auto;"><p><span class=""><strong>Marketing e Lançamento</strong></span></p><ul class="relative list-outside marker:text-foreground-750 dark:marker:text-foreground-600 flex flex-col ms-4 px-1"><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Estratégia de marketing digital</span></p></li><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Campanhas de lançamento</span></p></li></ul></li><li class="ps-2" style="opacity: 1; will-change: auto;"><p><span class=""><strong>Manutenção e Suporte</strong></span></p><ul class="relative list-outside marker:text-foreground-750 dark:marker:text-foreground-600 flex flex-col ms-4 px-1"><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Atualizações regulares</span></p></li><li class="ps-2" style="opacity: 1; will-change: opacity;"><p><span class="">Suporte ao usuário</span></p></li></ul></li></ol> --}}
 </div>
