update: updating title DigitalPro

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,15 @@
 <div class="container">
   <h4>
-    DigitalPro: Sua Plataforma de Educação Continuada em Tecnologia e Informática
+    <strong>DigitalPro</strong>: Sua Plataforma de Educação Continuada em Tecnologia e Informática
   </h4>
   <p>
-    Bem-vindo à DigitalPro, a plataforma de cursos online e conteúdo digital voltada para a educação continuada em tecnologia e informática. Nossa missão é capacitar profissionais e entusiastas da tecnologia com conhecimentos e habilidades atualizadas, preparando-os para os desafios do mercado.
+    Bem-vindo à <strong>DigitalPro</strong>, a plataforma de cursos online e conteúdo digital voltada para a educação continuada em tecnologia e informática. Nossa missão é capacitar profissionais e entusiastas da tecnologia com conhecimentos e habilidades atualizadas, preparando-os para os desafios do mercado.
   </p>
   <h5>
     Nossos cursos
   </h5>
   <p>
-    Na DigitalPro, oferecemos uma ampla variedade de cursos nas áreas mais demandadas da tecnologia:
+    Na <strong>DigitalPro</strong>, oferecemos uma ampla variedade de cursos nas áreas mais demandadas da tecnologia:
     <ul>
       <li>
         <strong>Desenvolvimento de Software</strong>
@@ -110,9 +110,9 @@
     Inscrições Abertas
   </h5>
   <p>
-    Junte-se à nossa comunidade de aprendizes e profissionais da tecnologia. Inscreva-se hoje e comece a transformar sua carreira com a DigitalPro. Aproveite nossas ofertas especiais de lançamento!
+    Junte-se à nossa comunidade de aprendizes e profissionais da tecnologia. Inscreva-se hoje e comece a transformar sua carreira com a <strong>DigitalPro</strong>. Aproveite nossas ofertas especiais de lançamento!
   </p>
-  <h5>Como foi planejada a DigitalPro?</h5>
+  <h5>Como foi planejada a <strong>DigitalPro</strong>?</h5>
   <ol>
     <li>
       Pesquisa e Análise
@@ -181,15 +181,15 @@
   </ol>
   <h5>Agradecimento final para que apoia o projeto</h5>
   <p class="p-2">
-    Gostaríamos de expressar nossa mais profunda gratidão a todos que participaram e apoiaram a jornada da <strong>DigitalPro</strong>. Desde o início, nosso objetivo foi oferecer educação continuada de qualidade em tecnologia e informática, e seu envolvimento tornou essa missão possível. Cada sugestão, feedback e palavra de encorajamento ajudaram a moldar o que somos hoje.
+    Gostaríamos de expressar nossa mais profunda gratidão a todos que participaram e apoiaram a jornada da <strong><strong>DigitalPro</strong></strong>. Desde o início, nosso objetivo foi oferecer educação continuada de qualidade em tecnologia e informática, e seu envolvimento tornou essa missão possível. Cada sugestão, feedback e palavra de encorajamento ajudaram a moldar o que somos hoje.
     <br><br>
-    É inspirador ver como a comunidade abraçou a <strong>DigitalPro</strong>. Sua dedicação e paixão pela aprendizagem contínua nos motivam a melhorar constantemente e a trazer conteúdos cada vez mais relevantes e inovadores. Vocês são a razão pela qual existimos e continuamos a crescer.
+    É inspirador ver como a comunidade abraçou a <strong><strong>DigitalPro</strong></strong>. Sua dedicação e paixão pela aprendizagem contínua nos motivam a melhorar constantemente e a trazer conteúdos cada vez mais relevantes e inovadores. Vocês são a razão pela qual existimos e continuamos a crescer.
     <br><br>
     Nosso sucesso não seria possível sem o comprometimento incansável de nossa equipe. Seu trabalho árduo, criatividade e inovação são a força motriz por trás de cada curso e recurso que oferecemos. Vocês são verdadeiros visionários e líderes no campo da educação digital.
     <br><br>
     Também agradecemos aos nossos parceiros e colaboradores, cuja expertise e apoio foram fundamentais para alcançar nossos objetivos. Juntos, conseguimos criar uma plataforma robusta e acessível que beneficia milhares de aprendizes.
     <br><br>
-    Por fim, nosso maior agradecimento vai para você, nosso estudante. Seu desejo de aprender e crescer é o que nos inspira todos os dias. Obrigado por escolher a <strong>DigitalPro</strong> como sua parceira na educação e por fazer parte desta jornada incrível. O futuro é brilhante e estamos ansiosos para continuar a explorá-lo juntos.
+    Por fim, nosso maior agradecimento vai para você, nosso estudante. Seu desejo de aprender e crescer é o que nos inspira todos os dias. Obrigado por escolher a <strong><strong>DigitalPro</strong></strong> como sua parceira na educação e por fazer parte desta jornada incrível. O futuro é brilhante e estamos ansiosos para continuar a explorá-lo juntos.
     <br><br>
     Muito obrigado! 🚀
   </p>
