--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>DigitalPro - Sua Plataforma de Educação Continuada em Tecnologia e Informática</title>
+    <title><strong>DigitalPro</strong> - Sua Plataforma de Educação Continuada em Tecnologia e Informática</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -44,17 +44,17 @@
       </div>
     </header>
     <hr>
-    
+
     {{{body}}}
     <div class="container">
       <footer class="py-3 my-4 text-bg-dark">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="/" class="nav-link px-2 text-white">Inicio</a></li>
           <li class="nav-item"><a href="/termos-de-uso" class="nav-link px-2 text-white">Termos de uso</a></li>
-          <li class="nav-item"><a href="https://github.com/ZeroAspect/digitalpro" class="nav-link px-2 text-white">Github</a></li>
+          <li class="nav-item"><a href="https://github.com/ZeroAspect/<strong>DigitalPro</strong>" class="nav-link px-2 text-white">Github</a></li>
           <li class="nav-item"><a href="/sobre" class="nav-link px-2 text-white">Sobre</a></li>
         </ul>
-        <p class="text-center text-white">&copy; 2024 DigitalPro, Inc</p>
+        <p class="text-center text-white">&copy; 2024 <strong>DigitalPro</strong>, Inc</p>
       </footer>
     </div>
     <script
