--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title><strong>DigitalPro</strong> - Sua Plataforma de Educação Continuada em Tecnologia e Informática</title>
+    <title>DigitalPro - Sua Plataforma de Educação Continuada em Tecnologia e Informática</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
