--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -6,12 +6,16 @@
   <div class="card text-bg-dark">
     <div class="card-header">
       <small class="d-flex justify-content-between">
-        <a href="/{{nome}}">{{nome}}</a>
+        <a href="/blog/post/{{id}}" class="text-white">{{titulo}}</a>
         <span class="badge bg-primary">{{post_like}}</span>
       </small>
     </div>
     <div class="card-body">
-      {{{conteudo}}}
+      <small>
+        {{data}}
+        <br>
+        <a href="/blog/post/{{id}}">Ir para o post</a>
+      </small>
     </div>
   </div>
 </div>
