feat: altering header comment color in /blog/post/:id

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -27,7 +27,7 @@
   </div>
   <br>
   <div class="card text-bg-dark">
-    <div class="card-header text-bg-light">
+    <div class="card-header">
       <h5>Comentar</h5>
     </div>
     <div class="card-body">
