style: creating post/id estructure

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -10,6 +10,9 @@
       </small>
     </div>
     <div class="card-body">
+      <h3>
+        <i>{{titulo}}</i>
+      </h3>
       {{{conteudo}}}
     </div>
     <div class="card-footer">
