update: updating header navBar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,8 +28,8 @@
             <li><a href="/" class="nav-link px-2 text-secondary">Inicio</a></li>
             <li><a href="/blog" class="nav-link px-2 text-white">BLog</a></li>
             <li><a href="/sobre" class="nav-link px-2 text-white">Sobre</a></li>
-            {{!-- <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">About</a></li> --}}
+            <li><a href="/editar/perfil" class="nav-link px-2 text-white">Perfil</a></li>
+            {{!-- <li><a href="#" class="nav-link px-2 text-white">About</a></li> --}}
           </ul>
 
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
