--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -5,8 +5,8 @@
   <button type="button" class="btn btn-primary" onclick="location.href = '/publicar'">Publicar novo Conteúdo</button>
 </div>
 {{#each posts}}
-<div class="container">
-  <div class="card text-bg-dark">
+<div class="container mb-3">
+  <div class="card text-bg-secondary">
     <div class="card-header">
       <small class="d-flex justify-content-between">
         <a href="/blog/post/{{id}}" class="text-white">{{titulo}}</a>
