--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,7 +51,7 @@
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="/" class="nav-link px-2 text-white">Inicio</a></li>
           <li class="nav-item"><a href="/termos-de-uso" class="nav-link px-2 text-white">Termos de uso</a></li>
-          <li class="nav-item"><a href="https://github.com/ZeroAspect/<strong>DigitalPro</strong>" class="nav-link px-2 text-white">Github</a></li>
+          <li class="nav-item"><a href="https://github.com/ZeroAspect/digitalpro" class="nav-link px-2 text-white">Github</a></li>
           <li class="nav-item"><a href="/sobre" class="nav-link px-2 text-white">Sobre</a></li>
         </ul>
         <p class="text-center text-white">&copy; 2024 <strong>DigitalPro</strong>, Inc</p>
