feat: creating foto de perfil

--- a/views/perfil.handlebars
+++ b/views/perfil.handlebars
@@ -1,6 +1,7 @@
 {{#each user}}
 <div class="container">
-  <h3>
+  <h3 class="d-flex align-items-center">
+  <img src="/posts/{{foto}}" alt="{{foto}}" class="rounded-circle mr-3" height="50" width="50">
     <a href="/{{nome}}" class="text-white">{{nome}}</a>
   </h3>
   <hr>
